Update jvm options