@@ -5,4 +5,4 @@ ADD target/uberjar/coinmarketcap-feed.jar /coinmarketcap-feed/app.jar
 
 EXPOSE 3000
 
-CMD ["java", "-Xmx128m", "-Xss512k", "-jar", "/coinmarketcap-feed/app.jar"]
+CMD ["java", "-Xmx128m", "-Xss512k", "-XX:+CMSClassUnloadingEnabled", "-XX:+UseConcMarkSweepGC", "-jar", "/coinmarketcap-feed/app.jar"]
